--- a/clusters/cdd-demo-aws/namespace-provisioner/testing-scanning-supplychain/scanpolicy-grype.yaml
+++ b/clusters/cdd-demo-aws/namespace-provisioner/testing-scanning-supplychain/scanpolicy-grype.yaml
@@ -6,27 +6,27 @@
 #@ end
 #! This if condition ensures that this scan policy is only created if the supply chain is testing_scanning and the TAP profile used is full or build.
 #@ if/end in_list('supply_chain', ['testing_scanning']) and in_list('profile', ['full', 'build']):
----
-apiVersion: apiextensions.k8s.io/v1
-kind: CustomResourceDefinition
-metadata:
-  name: scanpolicies.scanning.apps.tanzu.vmware.com
-  annotations:
-    kapp.k14s.io/change-group: scanning-crd
-    kapp.k14s.io/exists: ""
-spec:
-  scope: Namespaced
-  group: scanning.apps.tanzu.vmware.com
-  versions:
-    - name: v1beta1
-  names:
-    kind: ScanPolicy
+#! ---
+#! apiVersion: apiextensions.k8s.io/v1
+#! kind: CustomResourceDefinition
+#! metadata:
+#!   name: scanpolicies.scanning.apps.tanzu.vmware.com
+#!   annotations:
+#!     kapp.k14s.io/change-group: scanning-crd
+#!     kapp.k14s.io/exists: ""
+#! spec:
+#!   scope: Namespaced
+#!   group: scanning.apps.tanzu.vmware.com
+#!   versions:
+#!     - name: v1beta1
+#!   names:
+#!     kind: ScanPolicy
 ---
 apiVersion: scanning.apps.tanzu.vmware.com/v1beta1
 kind: ScanPolicy
 metadata:
-  annotations:
-    kapp.k14s.io/change-rule.0: "upsert after upserting scanning-crd"
+#!  annotations:
+#!    kapp.k14s.io/change-rule.0: "upsert after upserting scanning-crd"
   name: scan-policy
   labels:
     'app.kubernetes.io/part-of': 'scan-system'
